# stargate

./: .gitignore  .gitmodules  LICENSE  README.md
src/engine/: .clang_complete  .gitignore  CMakeLists.txt  Makefile  Makefile-orig  clang-mingw64-source-me.sh
src/engine/benchmark/: bench_main.c  bench_main.h  main.c  util.h
src/engine/cli/: main.c
src/engine/cv2pdb/: CHANGES  FEATURES  INSTALL  README.MD  autoexp.expand  autoexp.visualizer
src/engine/include/: _main.h  compiler.h  daw.h  files.h  globals.h  ipc.h  log.h  osc.h  plugin.h  project.h  soundcheck.h  stargate.h  unicode.h  wave_edit.h  worker.h
src/engine/include/audio/: audio_pool.h  input.h  item.h  paifx.h  sample_graph.h  util.h
src/engine/include/audiodsp/: constants.h
src/engine/include/csv/: 1d.h  2d.h  kvp.h  split.h
src/engine/include/daw/: config.h  limits.h  metronome.h
src/engine/include/ds/: list.h
src/engine/include/file/: path.h  pidfile.h
src/engine/include/hardware/: audio.h  config.h  midi.h
src/engine/include/plugins/: channel.h  compressor.h  delay.h  eq.h  fm1.h  limiter.h  multifx.h  nabu.h  pitchglitch.h  reverb.h  sampler1.h  sidechain_comp.h  simple_fader.h  trigger_fx.h  va1.h  vocoder.h  widemixer.h  xfade.h
src/engine/libcds/: .gitignore  Makefile  README.md  libcds.spec  meta.json
src/engine/libcds/src/: bytestr.c  (+6 more)
src/engine/python/: stargateenginemodule.c  test.py
src/engine/src/: _main.c  compiler.c  files.c  globals.c  log.c  osc.c  plugin.c  project.c  soundcheck.c  stargate.c  unicode.c  wave_edit.c  worker.c
src/engine/tests/: main.c  test_audiodsp.c  test_audiodsp.h  test_csv.c  test_csv.h  test_daw.c  test_daw.h  test_files.c  test_files.h  test_main.h  test_plugins.c  test_plugins.h  test_wave_edit.c  test_wave_edit.h
(+769 files in other folders)
